# DroidNode

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-ci.yml
api-registry-ksp/: build.gradle.kts
api-registry-ksp/src/main/kotlin/com/actl/mvp/apiregistryksp/: ApiRegistryGenerator.kt  ApiRegistrySymbolProcessorProvider.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/actl/mvp/: ActlApp.kt  DebugActivity.kt  MainActivity.kt
app/src/main/java/com/actl/mvp/ime/: ActlImeService.kt
app/src/main/java/com/actl/mvp/startup/: AdbBinaryResult.kt  AdbCommandResult.kt  AdbEndpoint.kt  AdbHostClient.kt  AdbMdnsDiscovery.kt  AppSettings.kt  DdmlibBridge.kt  DiscoveryState.kt  StartupRuntime.kt  WirelessStartupCoordinator.kt
app/src/main/jni/: CMakeLists.txt  adb_pairing.cpp
app/src/main/res/drawable/: bg_status_badge_off.xml  bg_status_badge_on.xml  bg_status_row.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_splash_logo.xml
app/src/main/res/layout/: activity_debug.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: actl_ime.xml
clients/llm-controller/: README.md  config.example.json  controller.py
docs/: API_PERFORMANCE_REPORT.md  README-CN.md
tests/: api_perf_tester.py  input_api_tester.sh  screenshot_perf_tester.py  xml_perf_tester.py
tools/: actl_agent.md  actl_agent.py  actl_agent_config.example.json  api_perf_tester.py  api_tester.sh  prepare_launcher_icon.py
(+52 files in other folders)
